<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeviceNameActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_launcher_round"
            android:contentDescription="@string/app_name" />

        <EditText
            android:id="@+id/deviceNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/chose_a_name" />

        <Button
            android:id="@+id/chooseNameBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="chooseName"
            android:text="@string/ok" />

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>